# WhoAmI

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: anchor.h.02B91CC5A0D9E28D.idx  audio_manager.cpp.9B835769031E7AC8.idx  audio_manager.h.BE65E1E8130FA3B3.idx  collider.cpp.CA2BF092FF88857D.idx  collider.h.BD8EF99C6480ADC7.idx  collision_space.cpp.DF5310FE96D94DEA.idx  collision_space.h.C114CF8048BDCEF2.idx  dialogue_manager.cpp.B6F42510D06A4329.idx  dialogue_manager.h.6F63D274D686EF6A.idx  event.cpp.DE5551106A817139.idx  event.h.40FA5C60EE0536C0.idx  game.cpp.52D5D9314A284DCE.idx  game.h.CA21A714AEB9539F.idx  level_editor.cpp.04F8E2E00DB3E746.idx  level_editor.h.D06B14CF383312A1.idx  levelizer.cpp.3EF014B48D3A6DD3.idx  levelizer.h.646BB27A21A1B9BB.idx  main.cpp.C2ADFC72D7B5B385.idx  main_scene.cpp.AE30A472DEE95656.idx  main_scene.h.91100064037FF13D.idx  menu_scene.cpp.198C4EDDFF12EA21.idx  menu_scene.h.57FCBF79EDD8D29C.idx  music_type.h.6F6E46D96280DA5D.idx  platform.cpp.CD676EAE9764CFD4.idx  (+11 more)
assets/dialogue/: dialogue.txt
scripts/: build_and_run.sh  build_web.sh  clean_all.sh
src/: main.cpp
src/collision/: collider.cpp  collider.h  collision_space.cpp  collision_space.h
src/core/: game.cpp  game.h
src/entities/: platform.cpp  platform.h  player.cpp  player.h  trigger.cpp  trigger.h
src/level/: level_editor.cpp  level_editor.h  levelizer.cpp  levelizer.h
src/managers/: audio_manager.cpp  audio_manager.h  dialogue_manager.cpp  dialogue_manager.h
src/scenes/: main_scene.cpp  main_scene.h
src/ui/: text.cpp  text.h
